[package]
name = "tsm-logman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
toml = "0.7.4"
serde = { version = "1.0.164", features = ["derive"] }
argparse = "0.2.2"
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.26"