[package]
name = "tsm-unitctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsm-ipc = { path = "../tsm-ipc" }
argparse = "0.2.2"
log = "0.4.19"
env_logger = "0.10.0"
zmq = "0.10.0"
protobuf = "3.2.0"
tabled = "0.12.2"

[build-dependencies]

[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
panic = "abort"