[package]
name = "tsm-unitman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.2"
toml = "0.7.4"
serde = { version = "1.0.164", features = ["derive"] }
users = "0.11.0"
argparse = "0.2.2"
ctrlc = "3.4.0"
log = "0.4.19"
env_logger = "0.10.0"
process_control = "4.0.3"

[dev-dependencies]


[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
panic = "abort"